--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/DhavalW/octopus/issues"
   },
-  "homepage": "https://github.com/DhavalW/octopus#readme"
+  "homepage": "https://github.com/DhavalW/octopus#readme",
+  "devDependencies": {
+    "debug": "^3.1.0"
+  },
+  "dependencies": {
+    "debug-pest": "^1.0.1"
+  }
 }
