--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Super easy namespaced & bi-directional RPC over multiple transport types.",
   "main": "octopus.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": "gulp js"
   },
   "keywords": [
     "rpc",
@@ -22,7 +23,15 @@
   },
   "homepage": "https://github.com/DhavalW/octopus#readme",
   "devDependencies": {
-    "debug": "^3.1.0"
+    "browserify": "^16.2.3",
+    "debug": "^3.1.0",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulplog": "^1.0.0",
+    "lodash.assign": "^4.2.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0"
   },
   "dependencies": {
     "debug-pest": "^1.0.1"
